# menu-admin

./: Makefile  README.md  app-list.c  app-list.h  app-menu.c  app-menu.h  app-util.c  app-util.h  main.c  menu-window.c  menu-window.h  meson.build  meson_options.txt  org.menuadmin.gschema.xml  replace.sh
data/: custom.css  meson.build  org.menuadmin.gschema.xml.in
data/icons/: meson.build
po/: POTFILES.in  menu-admin.pot  zh_CN.po
src/: app-menu.c  app-menu.h  app-util.c  app-util.h  main.c  menu-lockdown.c  menu-lockdown.h  menu-tool.c  menu-tool.h  menu-window.c  menu-window.h  meson.build
src/resources/: menu-admin-function-manager.ui  nautilus.gresource.xml
